---------------------------------------------------------------------------------------------------
Version: 0.69.46
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.45
Date: 2025-05-31
  Changes:
    - Compatibility for blueprint shotgun.
    - Marked Krastorio 2 spaced out as an INcompatibility. I made it not crash, but the problem is that it messes with crafting to the point where Rubia is really unplayable. This needs more time dedicated to give specific support, otherwise you just get trapped on the planet.
---------------------------------------------------------------------------------------------------
Version: 0.69.44
Date: 2025-05-31
  Changes:
    - Trashsteroid scale inverting settings can now be changed without rebooting the game. So much more convenient!
    - Module icons for biorecycler no longer obscure other machines. Thanks, Bilka.
    - Difficulty options have been implemented, but not yet available. You will be able to change difficulty once I can properly balance the actual difficulty.
    - New achievements, but I'm still working on being able to even test it properly.
    - Maraxsis can now make research vessels with Rubia science.
    - Forgot to credit Hornwitser, who made the quality glassware from which science sprites are derived. Licenses also updated.
---------------------------------------------------------------------------------------------------
Version: 0.69.43
Date: 2025-05-29
  Changes:
    - Fixed horrible crash from chunk checker in the new update. Sorry!
---------------------------------------------------------------------------------------------------
Version: 0.69.42
Date: 2025-05-29
  Changes:
    - Further optimization to trashsteroid rendering. Lower Rubia time usage.
    - Added a setting to invert how trashsteroids become bigger/smaller as they approach the surface.