@@ -330,7 +330,7 @@ disable-lyrical-music=Turns on accessibility mode for people with trash taste. D
 remove-rubia-from-promethium_sci=If set ON, then Rubia's science pack will NOT be needed for promethium science infinite research productivity tech. Default OFF.
 require-rubia-for-endgame-planets=If set ON, then beating Rubia is necessary to unlock endgame planets such as Aquilo AND modded endgame planets such as Maraxsis. Default ON.
 
-rubia-difficulty-setting=Magnifies trashsteroid health, damage dealt by trashsteroids, and the amount of damage sustained upon Rubia planet entry. Resources and crafting are not affected. Default = Normal.\n[img=utility/warning_icon]WARNING: "Pyanodons" requires Fulgoran technology (not explicitly required by the tech tree) to even land on Rubia.\n[img=utility/warning_icon]WARNING: "Engineer Must Die" additionally requires quality equipment to land on Rubia.
+rubia-difficulty-setting=Magnifies trashsteroid health, damage dealt by trashsteroids, and the amount of damage sustained upon Rubia planet entry. Resources and crafting are not affected. Default = Normal.\n[img=utility/warning_icon]WARNING: "Pyanodons" requires Fulgoran technology (not explicitly required by the tech tree) to even land on Rubia.\n[img=utility/warning_icon]WARNING: "Engineer Must Die" additionally requires [quality=epic] quality equipment to land on Rubia.
 ;rubia-megabasing-density-mode=Bigger numbers makes trashsteroids spawn less frequently, but with denser HP 
 rubia-rocketizer-early-unlock=Unlock the rocketizer alongside rocket silos (as though Rubia was not installed). This setting is for backwards compatibility with save files that installed "Rocket Cargo Insertion" prior to downloading Rubia. Please do not enable unless this applies to you. Default OFF.
 invert-trashsteroid-scaling=Flip trashsteroid scaling to become smaller as they make impact (instead of larger). Purely visual. Default OFF.
@@ -361,6 +361,8 @@ pre-rubia-cutscene-unprepared-naked=You feel a shiver down your spine. You are t
 pre-rubia-cutscene-unprepared-low-shield=You feel almost naked. You have nowhere near enough protection to land on Rubia alive.
 pre-rubia-cutscene-unprepared-medium-shield=You feel like you only have around half of the gear you need to land on Rubia without dying.
 pre-rubia-cutscene-unprepared-almost-shield=You feel like you are just barely falling short of what you need to land on Rubia without dying.
+pre-rubia-cutscene-unprepared-too-close=You are unsure if you have what you need too land on Rubia without dying. It seems too close to call.
+
 
 ;⚠️ = [img=utility/warning_icon]
 landing-cutscene-part1=[img=utility/danger_icon] Hull compromised
@@ -429,6 +431,9 @@ rubia-shield-warning-convo-part1=(exfret) There's no way he'll figure it out. He
 rubia-shield-warning-convo-part2=(Loup&Snoop) I want to believe
 rubia-shield-warning-convo-part3=(exfret) he'll definitely splat lmao
 rubia-shield-warning-convo-part4=(Loup&Snoop) no no no. he'll turn back. just look!
+
+[version-change-warnings]
+rubia-trashsteroid-health-scaling=(Loup&Snoop / Rubia) So... don't be mad, but I fixed a bug that made trashsteroid health not scale as much as it needed when you got high physical damage technology... A totally understandable mistake! But on the bright side, I also added difficulty settings under Mod Settings => Map Settings. If your base starts suddenly exploding, you should use that. Good luck!
 
 [tips-and-tricks-item-name]
 rubia-briefing=Rubia briefing
